# connectedhomeip

build_overrides/: perfetto.gni
examples/all-clusters-app/esp32/: CMakeLists.txt  README.md
examples/all-clusters-app/esp32/main/: CMakeLists.txt  Kconfig.projbuild  Rpc.cpp  main.cpp
examples/build_overrides/: perfetto.gni
examples/ipv6only-app/esp32/main/: CMakeLists.txt
examples/lock-app/esp32/: README.md
examples/lock-app/esp32/main/: CMakeLists.txt
examples/pigweed-app/esp32/main/: CMakeLists.txt
scripts/trace/: esp32_trace.json  gmscore_trace.json  gmscore_trace_0316.json  merge_traces.py  output.json  trace_esp_0316.json
src/app/clusters/network-commissioning/: network-commissioning-ember.cpp
src/app/clusters/operational-credentials-server/: operational-credentials-server.cpp
src/app/server/: Mdns.cpp
src/controller/: CHIPDevice.h  CHIPDeviceController.cpp
src/lib/mdns/: Advertiser_ImplMinimalMdns.cpp
src/platform/: BUILD.gn
src/platform/Darwin/: Logging.cpp
src/platform/ESP32/: BUILD.gn  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl_WiFi.cpp
src/platform/Linux/: Logging.cpp
src/protocols/secure_channel/: BUILD.gn  CASESession.cpp  PASESession.cpp  RendezvousParameters.h
src/trace/: BUILD.gn  trace.cpp  trace.h
