# Copyright (c) 2022 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")
import("//build_overrides/perfetto.gni")

declare_args() {
  chip_build_pw_trace_lib = false
  chip_build_perfetto_trace_lib = false
}

config("pw_trace_config") {
  defines = ["PW_TRACE_BACKEND_SET"]
}

config("perfetto_trace_config") {
  defines = [ "USE_PERFETTO_TRACING" ]
  include_dirs = [
    "${perfetto_root_path}/include",
    "${perfetto_root_path}/protos",
  ]
}

source_set("trace") {
  sources = [
    "trace.cpp",
    "trace.h",
  ]
  if (chip_build_pw_trace_lib) {
    public_configs = [ ":pw_trace_config" ]
    public_deps = [ "${dir_pigweed}/pw_trace" ]
  } else if (chip_build_perfetto_trace_lib) {
    public_configs = [ ":perfetto_trace_config" ]
    public_deps = [ "${perfetto_root_path}:libperfetto_client_experimental" ]
  }

}
